# gnerator-cv-gemini

./: .env.example  .gitignore  README.md  app.py  packages.txt  pyproject.toml  requirements.txt  run.bat  sample_cv.txt
.streamlit/: config.toml
templates/: classic_simple.tex  cover_letter_template.txt  cv_template.tex  modern_professional.tex
utils/: __init__.py  analytics.py  cv_parser.py  gemini_client.py  latex_handler.py
